--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,29 @@
-html {
+#root {
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
 }
 
-#root {
-  padding-top: 100px;
+#map {
+  height: 100%;
 }
 
-.container {
-  margin-left: 15px;
-  margin-right: 15px;
+.btn-geo {
+  position: absolute;
+  bottom: 24px;
+  right: 60px;
+}
+
+.btn-geo-2 {
+  position: absolute;
+  top: 70px;
+  right: 15px;
+  height: 32px;
+  z-index: 1;
+}
+
+::-webkit-scrollbar {
+  /* chrome based */
+  width: 0px; /* ширина scrollbar'a */
+  background: transparent; /* опционально */
 }
