--- a/client/src/components/common/Navbar/navbar.css
+++ b/client/src/components/common/Navbar/navbar.css
@@ -7,3 +7,24 @@
   background-size: cover;
 }
 
+.my-drawer .am-drawer-sidebar .am-list {
+  min-height: 100%;
+  width: 300px;
+  padding: 0;
+}
+
+.my-drawer .am-drawer-sidebar .am-list .am-list-body {
+  min-height: 100vh;
+}
+
+.navigation-list {
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0 auto;
+}
+
+.navigation-item {
+  margin-left: 5px;
+}
