--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,6 +17,17 @@ p {
   font-size: 1.2em;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0)
+}
+
 .btn {
   margin-right: 5px;
   margin-bottom: 5px;
