--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,7 +25,7 @@ p {
   padding: 0;
   overflow: hidden;
   border: 0;
-  clip: rect(0 0 0 0)
+  clip: rect(0 0 0 0);
 }
 
 .btn {
@@ -33,6 +33,10 @@ p {
   margin-bottom: 5px;
   margin-top: 5px;
   width: 160px;
+}
+
+.btn-login {
+  width: 210px;
 }
 
 .small-text {
